
2016-09-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_validate_program_data): moved check for record depending
	  to (validate_record_depending) and activated storage check - relax-syntax
	  can be used to compile legacy programs

2016-09-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (finalize_file): bug #278 move key field checks
	  to (validate_key_field) and verify that variable record size
	  is at least large enough to hold the keys

2016-09-16  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (cb_build_move_literal): fixed bug #69 by forcing a call to
	  cob_move when binary-truncate is in effect.

2016-09-15  Edward Hart <edward.dan.hart@gmail.com>

	* pplex.l (ppinput): fixed bug #297 where quote marks were parsed in
	  comment paragraphs.
	* error.c, cobc.h: added (cb_plex_verify).

2016-09-12  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (accept_clause): added ACCEPT ... BEFORE TIME extension.

2016-09-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppinput): bug #312 don't ignore directives starting with $
	  at column 7 when in fixed format (if acucomment doesn't apply)

2016-09-11  Edward Hart <edward.dan.hart@gmail.com>

	* ppparse.y, cobc.c: simplified implementation of variable format by
	  treating it as fixed-format with the program-text area ending at
	  column 250.

2016-09-06  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Rearranged pline allocation and added some checks.
	  Added pline_check_limit() function.

2016-09-06  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Changed the pline array to an array of pointers.
	  The lines are allocated and the allocation limits are checked.
	  If the the CB_READ_AHEAD is exceeded an abort is issued.
	* cobc.h: Increase CB_READ_AHEAD to 800.

2016-09-05  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c, cobc.h: delete references to cobc_init_scanner, which was
	  deleted in [r1100].
