@@ -1,4 +1,13 @@
 
+2016-09-21  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y: added RETRY and ADVANCING ON LOCK as pending features.
+	* parser.y, reserved.c: made FOREVER context-sensitive.
+	* reserved.c (default_reserved_words): corrected year of standard from
+	  2008 to 2014.
+	* reserved.c (lookup_reserved_word): changed to allow context-sensitive
+	  words to be activated by different words.
+
 2016-09-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* typeck.c (cb_validate_program_data): moved check for record depending
@@ -106,7 +115,7 @@
 
 2016-08-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
 
-	* scanner.l: added premature implementation of national-literals, 
+	* scanner.l: added premature implementation of national-literals,
 	  hexadecimal-national-literals, hexadecimal-boolean-literals
 	* tree.c, tree.h: new function cb_build_national_literal
 	* tree.c (cb_concat_literals): allow concatenation of national and
@@ -183,7 +192,7 @@
 	* cobc.c, cobc.h: better help for compiler flags
 	* flag.def, cobc.c, cobc.h: added more parameters in flag.def for better
 	  help output; changed defines for CB_FLAG_RQ and CB_FLAG_NQ
-	* Makefile.am: add config.def as prerequisite for man-page 
+	* Makefile.am: add config.def as prerequisite for man-page
 
 2016-08-09  Edward Hart <edward.dan.hart@gmail.com>
 
@@ -196,7 +205,7 @@
 2016-08-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* error.c, tree.h, typeck.c, parser.y: suppress listing output and
-	  counting of warnings/errors with the new functions 
+	  counting of warnings/errors with the new functions
 	  listprint_suppress/listprint_restore
 	* cobc.c (print_program_trailer): correct grammar for 1 error/warning
 
